<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="#C874D6"
        android:padding="15dp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:text="@string/HELLO"/>
    <Button
        android:id="@+id/snackbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30sp"
        android:textStyle="bold"
        android:text="@string/Snackbar"
        />
    <Button
        android:id="@+id/alertdialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_margin="30sp"
        android:text="@string/AlertDialog"/>
    <Button
        android:id="@+id/custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30sp"
        android:padding="20dp"
        android:textStyle="bold"
        android:text="@string/Custom_Dialog"/>

</LinearLayout>